working on jqtouch integration

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,1 +1,24 @@
 @import url('font-awesome.min.css');
+
+
+//clr
+.clr:after {
+	content: ".";
+	display: block;
+	clear: both;
+	visibility: hidden;
+	line-height: 0;
+	height: 0;
+}
+ 
+.clr {
+	display: inline-block;
+}
+ 
+html[xmlns] .clr {
+	display: block;
+}
+ 
+* html .clr {
+	height: 1%;
+}
